fixed hero image size on mobile version

--- a/style/style.css
+++ b/style/style.css
@@ -294,10 +294,10 @@ button{
     }
     .hero-image img {
         position:absolute;
-        top: 15vh;
+        top: 100px;
         left: 7vw;
         width: 100%;
-        min-width: 390px;
+        min-width:80%;
         height: 35%;
         opacity: 0.5;
         z-index: -1;
